--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <img src="assets/images/osn-logo.png" class="header__logo" />
       <div class="pt-navbar-heading header__title">Olimpiade Sains Nasional Informatika 2019</div>
       <span class="pt-navbar-divider" />
-      <div class="header__subtitle">Manado, 1-7 Juli 2019</div>
+      <div class="header__subtitle">Manado, 30 Juni-6 Juli 2019</div>
     </div>
     <div class="pt-navbar-group pt-align-right">
       <img src="assets/images/toki-logo.png" class="header__logo" />
