--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -2,7 +2,7 @@
   <div class="menubar__content">
     <div class="pt-tabs">
       <ul class="pt-tab-list" role="tablist">
-        <li class="pt-tab" role="tab" aria-selected="{% if page.key == 'news' %}true{% else %}false{% endif %}">
+        <li class="pt-tab" role="tab" aria-selected="true">
             <a href="/">Beranda</a>
         </li>
       </ul>
