Hardcode scoreboard html

--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -14,7 +14,7 @@
           role="tab"
           aria-selected="{% if page.key == 'results' %}true{% else %}false{% endif %}"
         >
-          <a href="/hasil.html">Hasil Sementara</a>
+          <a href="/hasil.html">Hasil</a>
         </li>
         <li
           class="pt-tab"
